--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-* {
+*{
     margin: 0;
     padding: 0;
     font-family: 'Work Sans', sans-serif;
@@ -64,6 +64,10 @@ section.about {
     padding: 18% 8%;
 }
 
+.ul-list{
+    color: #16D887;
+}
+
 ul.list li {
     list-style: none;
     margin-bottom: 12px;
@@ -74,20 +78,20 @@ ul.list li i {
     margin-right: 8px;
 }
 
-/* My Plans Section */
+/* Plan Section */
 
-section.my-plans {
+section.my-plans{
     margin: 60px 0;
 }
 
-.my-plans-item {
+.my-plans-item{
     display: flex;
     text-align: center;
     gap: 12.4%;
     margin-top: 60px;
 }
 
-.my-plans h2 {
+.my-plans h2{
     text-align: center;
 }
 
@@ -103,9 +107,9 @@ section.my-plans {
     margin-top: 8px;
 }
 
-/* CTA Section */
+/* Call Section */
 
-.cta {
+.call-section{
     background-image: linear-gradient(to left, rgb(245 246 252 / 0%), #005facfa), url(images/watch.png);
     background-repeat: no-repeat;
     background-size: cover;
@@ -114,7 +118,7 @@ section.my-plans {
     margin: 100px 0;
 }
 
-section.cta h2 {
+.call-section h2 {
     color: #ffffff;
     margin-bottom: -10px;
 }
@@ -127,12 +131,12 @@ footer {
     display: flex;
 }
 
-.footer-left h2 {
+.contact-left h2 {
     color: #ffffff;
     margin-bottom: 12px;
 }
 
-.footer-left p {
+.contact-left p {
     width: 62%;
 }
 
@@ -140,26 +144,26 @@ footer {
     margin: 20px 0;
 }
 
-.social img {
+.social-image img {
     width: 36px;
     margin-right: 8px;
 }
 
-.newslatter h3 {
+.subscribe h3{
     color: #ffffff;
     font-weight: 600;
     margin-bottom: 20px;
     font-size: 24px;
 }
 
-input[type="email"] {
+input{
     background: transparent;
     padding: 18px 100px 18px 18px;
     border: 1px solid #ffffff;
     border-radius: 6px;
 }
 
-input.cta-btn {
+.subs-btn {
     background: #005FAC;
     color: #ffffff;
     margin-top: 15px;
